<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/big_window_layout"
    android:layout_width="150dp"
    android:layout_height="250dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_home_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_layout"
        android:text="@string/home_page"
        android:textColor="@drawable/selector_item_text_color">

    </Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/btn_begin_add_people"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_layout"
        android:text="@string/begin_add_people"
        android:textColor="@drawable/selector_item_text_color">

    </Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/btn_stop_add_people"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_layout"
        android:text="@string/stop_add_people"
        android:textColor="@drawable/selector_item_text_color"></Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/btn_close_flow_window"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_layout"
        android:text="@string/close_flow_window"
        android:textColor="@drawable/selector_item_text_color"></Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_layout"
        android:text="@string/back"
        android:textColor="@drawable/selector_item_text_color"></Button>

</LinearLayout>