<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="czc.lazyhelper.activity.ValidateActivity">

    <LinearLayout
        android:id="@+id/ll_login_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validity_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="加入QQ群激活：654565821"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/selector_button"
        android:text="@string/validity"
        android:textColor="@drawable/selector_button_text" />

    <LinearLayout
        android:id="@+id/ll_success_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/success_tips"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/selector_button"
            android:text="@string/already_validity_software"
            android:textColor="@drawable/selector_button_text"
            android:textSize="22sp" />
    </LinearLayout>

</FrameLayout>
