<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title"
        android:padding="8dp" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/dialog_icon_warn"
            android:drawablePadding="5dp"
            android:text="@string/dialog_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp" >
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_dialogbutton"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="@drawable/bg_dialogtext"
            android:textSize="16sp" />

        <View
            android:id="@+id/view_line1"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/line_color" />

        <Button
            android:id="@+id/btn_custom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_dialogbutton"
            android:gravity="center"
            android:text="@string/dialog_custom"
            android:textColor="@drawable/bg_dialogtext"
            android:textSize="16sp" />

        <View
            android:id="@+id/view_line2"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/line_color" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_dialogbutton"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="@drawable/bg_dialogtext"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>